--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
 
   elementary: ^3.0.0
   flutter_feature_arch:
-    git: git@github.com:ERGataullin/flutter_feature_arch.git
+    git:
+      url: https://github.com/ERGataullin/flutter_feature_arch.git
   go_router: ^11.0.0
   provider: ^6.0.5
 
