--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "dart.flutterSdkPath": "D:\\Development\\SDK\\Flutter\\3.13.5",
+    "dart.flutterSdkPath": ".fvm/flutter_sdk",
     // Remove .fvm files from search
     "search.exclude": {
         "**/.fvm": true
