--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,11 @@ dependencies:
   elementary: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   go_router: ^11.0.0
   http: ^1.1.0
+  intl: ^0.18.1
   provider: ^6.0.5
 
 dev_dependencies:
@@ -21,4 +24,5 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  generate: true
   uses-material-design: true
