--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   go_router: ^11.0.0
+  hive: ^2.2.3
   http: ^1.1.0
   intl: ^0.18.1
   provider: ^6.0.5
+  webview_flutter: ^4.4.1
+
 
 dev_dependencies:
   flutter_lints: ^2.0.3
