--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  go_router: ^11.0.0
+  flutter_web_plugins:
+    sdk: flutter
+  go_router: ^11.1.4
   http: ^1.1.0
   intl: ^0.18.1
   provider: ^6.0.5
