--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,11 @@ dependencies:
     sdk: flutter
   go_router: ^11.0.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^1.1.0
   intl: ^0.18.1
   provider: ^6.0.5
+  webview_cookie_manager: ^2.0.6
   webview_flutter: ^4.4.1
 
 
