--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,19 +7,28 @@
         {
             "name": "Debug",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "args": [
+                "--web-browser-flag=--disable-web-security"
+            ]
         },
         {
             "name": "Profile",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile"
+            "flutterMode": "profile",
+            "args": [
+                "--web-browser-flag=--disable-web-security"
+            ]
         },
         {
             "name": "Release",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "release"
+            "flutterMode": "release",
+            "args": [
+                "--web-browser-flag=--disable-web-security"
+            ]
         }
     ]
 }
