--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   go_router: ^11.1.4
+  html: ^0.15.4
   http: ^1.1.0
   intl: ^0.18.1
   provider: ^6.0.5
