--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,4 @@
 arb-dir: assets/localizations
 template-arb-file: app_ru.arb
 output-localization-file: app_localizations.dart
+nullable-getter: false
