--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,10 @@ dependencies:
   html: ^0.15.4
   http: ^1.1.0
   intl: ^0.18.1
+  path_provider: ^2.1.1
   provider: ^6.0.5
   webview_cookie_manager: ^2.0.6
-  webview_flutter: ^4.4.1
+  webview_flutter: ^4.4.2
 
 
 dev_dependencies:
