--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  core: 
+    path: ../core
   elementary: ^3.0.0
   flutter:
     sdk: flutter
@@ -24,7 +26,6 @@ dependencies:
   provider: ^6.0.5
   webview_cookie_manager: ^2.0.6
   webview_flutter: ^4.4.2
-
 
 dev_dependencies:
   flutter_lints: ^2.0.3
