--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  auth:
+    path: ../modules/auth
   core: 
     path: ../core
   elementary: ^3.0.0
@@ -28,7 +30,7 @@ dependencies:
   webview_flutter: ^4.4.2
 
 dev_dependencies:
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 
