--- a/core/analysis_options.yaml
+++ b/core/analysis_options.yaml
@@ -1,7 +1,7 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
-  exclude: [build/**]
+  exclude: [build/**, lib/**.g.dart]
   language:
     strict-casts: true
     strict-inference: true
