--- a/modules/player/pubspec.yaml
+++ b/modules/player/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   html: ^0.15.4
   intl: ^0.18.1
   provider: ^6.0.5
-  video_player_media_kit: ^1.0.4
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_lints: ^3.0.1
