--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,6 +15,9 @@ workflows:
         - pattern: feature/*
           include: true
           source: true
+        - pattern: fix/*
+          include: true
+          source: true
     scripts:
       - name: Pub get
         script: sh scripts/pub_get.sh
