Video player and controls segregation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "files.watcherExclude": {
         "**/.fvm": true
     },
-    "dart.debugExternalPackageLibraries": true
+    "dart.debugExternalPackageLibraries": true,
+    "dart.debugSdkLibraries": true
 }
