--- a/modules/root_menu/l10n.yaml
+++ b/modules/root_menu/l10n.yaml
@@ -2,6 +2,6 @@ arb-dir: assets/localizations
 output-dir: lib/src/utils/localizations
 template-arb-file: ru.arb
 output-localization-file: localizations.g.dart
-output-class: MenuLocalizations
+output-class: RootMenuLocalizations
 synthetic-package: false
 nullable-getter: false
