--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -21,14 +21,14 @@ dependencies:
     sdk: flutter
   go_router: ^12.1.0
   hive: ^2.2.3
-  menu:
-    path: ../modules/menu
   movies: 
     path: ../modules/movies
   path_provider: ^2.1.1
   player:
     path: ../modules/player
   provider: ^6.0.5
+  root_menu:
+    path: ../modules/root_menu
 
 dev_dependencies:
   flutter_lints: ^3.0.1
