--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   go_router: ^13.0.0
+  hive: ^2.2.3
   movies: 
     path: ../modules/movies
   path_provider: ^2.1.1
