--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  collection: ^1.18.0
   elementary: ^3.0.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   hive: ^2.2.3
